--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    hello gulp!
+    <div class="text">Hello font!</div>
 </body>
 </html>
