--- a/src/index.html
+++ b/src/index.html
@@ -33,16 +33,20 @@
                 <div class="promo__icons">
                     <div class="promo__icon">
                         <img src="icons/stop_watch.png" alt="stop_watch">
-                        <div class="promo__text">Время подбора: 10 минут</div>
+                        <div class="promo__text">Время подбора:<br>10 минут</div>
                     </div>
                     <div class="promo__icon">
                         <img src="icons/delivery.png" alt="delivery">
-                        <div class="promo__text">Бесплатная доставка</div>
+                        <div class="promo__text">Бесплатная<br>доставка</div>
                     </div>
                     <div class="promo__icon">
                         <img src="icons/messages.png" alt="messages">
-                        <div class="promo__text">Ответим на все вопросы</div>
+                        <div class="promo__text">Ответим<br>на все вопросы</div>
                     </div>
+                </div>
+                <button class="promo__button">заказать кОНСУЛЬТАЦИЮ</button>
+                <div class="promo__link">
+                    или <span>ПЕРЕЙТИ В КАТАЛОГ</span>
                 </div>
             </div>
         </div>
