--- a/src/index.html
+++ b/src/index.html
@@ -44,11 +44,50 @@
                         <div class="promo__text">Ответим<br>на все вопросы</div>
                     </div>
                 </div>
-                <button class="promo__button">заказать кОНСУЛЬТАЦИЮ</button>
+                <button class="button button__main">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
-                    или <span>ПЕРЕЙТИ В КАТАЛОГ</span>
+                    или <a href="#">перейти в каталог</a>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="advantages">
+        <div class="container">
+            <h2 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <img src="icons/cup.png" alt="cup">
+                    <h3>Делимся опытом</h3>
+                    <div class="advantages__text">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/heart.png" alt="heart">
+                    <h3>Заботимся о здоровье</h3>
+                    <div class="advantages__text">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/shoe.png" alt="shoe">
+                    <h3>Учим бегать</h3>
+                    <div class="advantages__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING</a>.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="consultation">
+        <div class="container">
+            <h2 class="consultation__header">Получите бесплатную консультацию по подбору пульсометра </h2>
+            <div class="consultation__descr">Просто заполните форму заявки и мы перезвоним вам в течении <span>10</span> минут</div>
+            <form action="#">
+                <input class="consultation__input" placeholder="Ваше имя" type="text">
+            </form>
+            <form action="#">
+                <input class="consultation__input" placeholder="Ваш телефон" type="text">
+            </form>
+            <form action="#">
+                <input class="consultation__input" placeholder="Ваш email" type="text">
+            </form>
         </div>
     </section>
 </body>
