slider - finished. tabs - added

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
             </form>
         </div>
     </section>
-
+    <!-- SLICK SLIDER -->
     <section class="carousel">
         <div class="container">
             <div class="carousel__inner">
@@ -108,9 +108,22 @@
         </div>
     </section>
 
+    <section class="catalog">
+        <div class="container">
+            <h2 class="title">Каталог пульсометров</h2>
+            <ul class="catalog__tabs">
+                <li class="catalog__tab"><div>Для фитнеса</div></li>
+                <li class="catalog__tab"><div>для бега</div></li>
+                <li class="catalog__tab"><div>для триатлона</div></li>
+            </ul>
+
+        </div>
+    </section>
+
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
+    <!-- <script src="js/test.js"></script> -->
 </body>
 </html>
