--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <!-- PROMO SECTION -->
     <section class="promo">
         <div class="container">
             <header class="header">
@@ -27,7 +28,6 @@
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
-
             <div class="promo__wrapper">
                 <h1 class="promo__header">Подбор пульсометра</h1>
                 <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
@@ -52,7 +52,7 @@
             </div>
         </div>
     </section>
-
+    <!-- ADVANTAGES SECTION -->
     <section class="advantages">
         <div class="container">
             <h2 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h2>
@@ -75,7 +75,7 @@
             </div>
         </div>
     </section>
-
+    <!-- CONSULTATION SECTION -->
     <section class="consultation">
         <div class="container">
             <h2 class="consultation__header">Получите бесплатную консультацию по подбору пульсометра </h2>
@@ -84,7 +84,6 @@
                 <input name="name" required class="feed-form__input" placeholder="Ваше имя" type="text">
                 <input name="phone" required class="feed-form__input" placeholder="Ваш телефон" type="number">
                 <input name="email" required class="feed-form__input" placeholder="Ваш e-mail" type="email">
-                
                 <button class="button button__submit">
                     заказать кОНСУЛЬТАЦИЮ
                 </button>
@@ -107,16 +106,265 @@
             </div>
         </div>
     </section>
-
+    <!-- TABS SECTION-->
     <section class="catalog">
         <div class="container">
             <h2 class="title">Каталог пульсометров</h2>
+            <!-- TABS -->
             <ul class="catalog__tabs">
-                <li class="catalog__tab"><div>Для фитнеса</div></li>
+                <li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li>
                 <li class="catalog__tab"><div>для бега</div></li>
                 <li class="catalog__tab"><div>для триатлона</div></li>
             </ul>
-
+            <div class="catalog__content catalog__content_active"> <!-- catalog__content_active -->
+                <!-- CARD -->
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active"> <!-- catalog-item__content_active -->
+                            <img src="img/card-photo.png" class="catalog-item__img"></img>
+                            <div class="catalog-item__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list "> <!-- catalog-item__list_active -->
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">Назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item_prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__current-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button__catalog">КУПИТЬ</button>
+                    </div>
+                </div>
+                <!-- === -->
+                <!-- CARD -->
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active"> <!-- catalog-item__content_active -->
+                            <img src="img/card-photo.png" class="catalog-item__img"></img>
+                            <div class="catalog-item__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list "> <!-- catalog-item__list_active -->
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">Назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item_prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__current-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button__catalog">КУПИТЬ</button>
+                    </div>
+                </div>
+                <!-- === -->
+                <!-- CARD -->
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active"> <!-- catalog-item__content_active -->
+                            <img src="img/card-photo.png" class="catalog-item__img"></img>
+                            <div class="catalog-item__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list "> <!-- catalog-item__list_active -->
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">Назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item_prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__current-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button__catalog">КУПИТЬ</button>
+                    </div>
+                </div>
+                <!-- === -->
+                <!-- CARD -->
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active"> <!-- catalog-item__content_active -->
+                            <img src="img/card-photo.png" class="catalog-item__img"></img>
+                            <div class="catalog-item__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list "> <!-- catalog-item__list_active -->
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">Назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item_prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__current-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button__catalog">КУПИТЬ</button>
+                    </div>
+                </div>
+                <!-- === -->
+                <!-- CARD -->
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active"> <!-- catalog-item__content_active -->
+                            <img src="img/card-photo.png" class="catalog-item__img"></img>
+                            <div class="catalog-item__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list "> <!-- catalog-item__list_active -->
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">Назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item_prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__current-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button__catalog">КУПИТЬ</button>
+                    </div>
+                </div>
+                <!-- === -->
+                <!-- CARD -->
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active"> <!-- catalog-item__content_active -->
+                            <img src="img/card-photo.png" class="catalog-item__img"></img>
+                            <div class="catalog-item__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list "> <!-- catalog-item__list_active -->
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">Назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item_prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__current-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button__catalog">КУПИТЬ</button>
+                    </div>
+                </div>
+                <!-- === -->
+            </div>
+            <div class="catalog__content "> <!-- catalog__content_active -->
+                <!-- CARD -->
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active"> <!-- catalog-item__content_active -->
+                            <img src="img/card-photo.png" class="catalog-item__img"></img>
+                            <div class="catalog-item__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list "> <!-- catalog-item__list_active -->
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">Назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item_prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__current-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button__catalog">КУПИТЬ</button>
+                    </div>
+                </div>
+                <!-- === -->
+                <!-- CARD -->
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active"> <!-- catalog-item__content_active -->
+                            <img src="img/card-photo.png" class="catalog-item__img"></img>
+                            <div class="catalog-item__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list "> <!-- catalog-item__list_active -->
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">Назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item_prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__current-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button__catalog">КУПИТЬ</button>
+                    </div>
+                </div>
+                <!-- === -->
+            </div>
+            <div class="catalog__content "> <!-- catalog__content_active -->
+                <!-- CARD -->
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active"> <!-- catalog-item__content_active -->
+                            <img src="img/card-photo.png" class="catalog-item__img"></img>
+                            <div class="catalog-item__subheader">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list "> <!-- catalog-item__list_active -->
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">Назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item_prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__current-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button__catalog">КУПИТЬ</button>
+                    </div>
+                </div>
+                <!-- === -->
+            </div>
         </div>
     </section>
 
