js script for modal windows added

--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__content catalog-item__content_active"> <!-- catalog-item__content_active -->
 							<img src="img/card-photo.png" class="catalog-item__img"></img>
-							<div class="catalog-item__subheader">Пульсометр Polar FT1</div>
+							<div class="catalog-item__subheader">Пульсометр Polar FG56</div>
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
@@ -203,7 +203,7 @@
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__content catalog-item__content_active"> <!-- catalog-item__content_active -->
 							<img src="img/card-photo.png" class="catalog-item__img"></img>
-							<div class="catalog-item__subheader">Пульсометр Polar FT1</div>
+							<div class="catalog-item__subheader">Пульсометр Polar FP1-K1</div>
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
