--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
 		<div class="container">
 			<h2 class="consultation__header">Получите бесплатную консультацию по подбору пульсометра </h2>
 			<div class="consultation__descr">Просто заполните форму заявки и мы перезвоним вам в течении <span>10</span> минут</div>
-			<form id="consultaion-form" class="feed-form" action="#">
+			<form id="consultation-form" class="feed-form" action="#">
 				<input name="name" required class="feed-form__input" placeholder="Ваше имя" type="text">
 				<input name="phone" required class="feed-form__input" placeholder="Ваш телефон" type="phone"> <!-- type="number" -->
 				<input name="email" required class="feed-form__input" placeholder="Ваш e-mail" type="email">
@@ -444,7 +444,7 @@
 	<!-- MODAL WINDOWS SECTION -->
 	<div class="overlay">
 		<!-- MODAL -->
-		<div class="modal" id="consultaion">
+		<div class="modal" id="consultation">
 			<div class="close">
 				<a href="#" class="close__sign">&times;</a>
 			</div>
