--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pulse</title>
-	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> -->
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -382,7 +381,7 @@
 		<div class="container">
 			<h2 class="title">отзывы клиентов</h2>
 			<div class="feedback__wrapper">
-				<div class="feedback-item animate__animated animate__backInUp wow" data-wow-duration="1" data-wow-delay="1s">
+				<div class="feedback-item animate__animated animate__backInUp wow" data-wow-duration="0.8s" data-wow-delay="0.6s">
 					<img src="img/photo_1.png" alt="user_photo">
 					<div class="feedback-item__text">
 						<div class="feedback-item__header">Ирина Иванченко</div>
@@ -394,7 +393,7 @@
 						Спасибо, RunSmart! </div>
 					</div>
 				</div>
-				<div class="feedback-item animate__animated animate__backInUp wow" data-wow-duration="1" data-wow-delay="1.1s">
+				<div class="feedback-item animate__animated animate__backInUp wow" data-wow-duration="0.8s" data-wow-delay="0.8s">
 					<img src="img/photo_2.png" alt="user_photo">
 					<div class="feedback-item__text">
 						<div class="feedback-item__header">Иван Сёмочкин</div>
@@ -406,7 +405,7 @@
 						С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
 					</div>
 				</div>
-				<div class="feedback-item animate__animated animate__backInUp wow" data-wow-duration="1" data-wow-delay="1.3s">
+				<div class="feedback-item animate__animated animate__backInUp wow" data-wow-duration="0.8s" data-wow-delay="1s">
 					<img src="img/photo_3.png" alt="user_photo">
 					<div class="feedback-item__text">
 						<div class="feedback-item__header">Юлия Дашкина</div>
