logo changed, fixed #13

--- a/src/index.html
+++ b/src/index.html
@@ -411,7 +411,7 @@
 	<!-- FEEDBACK SECTION -->
 	<section class="feedback">
 		<div class="container">
-			<h2 class="title">отзывы клиентов</h2>
+			<h2 class="title">customer feedback</h2>
 			<div class="feedback__wrapper">
 				<div class="feedback-item animate__animated animate__backInUp wow" data-wow-duration="0.8s" data-wow-delay="0.6s">
 					<img src="img/photo_1.png" alt="user_photo">
