--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 		<div class="container">
 			<header class="header">
 				<a href="#" class="header__logo">
-					<img src="img/logo.png" alt="logo">
+					<img src="img/logo.png" alt="logo"> <!-- logo fixed -->
 				</a>
 				<div class="header__official">
 					Official representative
