added metatags and favicon

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,31 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pulse</title>
+	
+	<!-- Primary Meta Tags -->
+	<title>Selecting a heart rate monitor</title>
+	<meta name="title" content="Selecting a heart rate monitor">
+	<meta name="description" content="Professional assistance in selecting heart rate monitors. Take care of your health with us!">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://cyberman-00.github.io/Front-end_demo_Pulse/dist/">
+	<meta property="og:title" content="Selecting a heart rate monitor">
+	<meta property="og:description" content="Professional assistance in selecting heart rate monitors. Take care of your health with us!">
+	<meta property="og:image" content="">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://cyberman-00.github.io/Front-end_demo_Pulse/dist/">
+	<meta property="twitter:title" content="Selecting a heart rate monitor">
+	<meta property="twitter:description" content="Professional assistance in selecting heart rate monitors. Take care of your health with us!">
+	<meta property="twitter:image" content="">
+	<!-- Favicon  -->
+	<link rel="apple-touch-icon" sizes="180x180" href="icons/favicon_io/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon_io/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon_io/favicon-16x16.png">
+	<link rel="manifest" href="icons/favicon_io/site.webmanifest">
+
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
