--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,23 @@
 	<meta property="twitter:description" content="Professional assistance in selecting heart rate monitors. Take care of your health with us!">
 	<meta property="twitter:image" content="">
 	<!-- Favicon  -->
-	<link rel="apple-touch-icon" sizes="180x180" href="icons/favicon_io/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon_io/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon_io/favicon-16x16.png">
-	<link rel="manifest" href="icons/favicon_io/site.webmanifest">
+	<link rel="apple-touch-icon" sizes="57x57" href="icons/health_favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="icons/health_favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="icons/health_favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="icons/health_favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="icons/health_favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="icons/health_favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="icons/health_favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="icons/health_favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="icons/health_favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="icons/health_favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="icons/health_favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="icons/health_favicon/favicon-16x16.png">
+	<link rel="manifest" href="icons/health_favicon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
